--- a/.gitignore
+++ b/.gitignore
@@ -136,12 +136,12 @@ dist
 .DS_Store
 Thumbs.db
 
-./apps/api/dist
-./apps/web/dist
-./apps/api/node_modules
-./apps/web/node_modules
-./apps/api/dist
-./apps/web/dist
-./apps/api/node_modules
-./apps/web/node_modules
-./apps/web/.angular/
+apps/api/dist
+apps/web/dist
+apps/api/node_modules
+apps/web/node_modules
+apps/api/dist
+apps/web/dist
+apps/api/node_modules
+apps/web/node_modules
+apps/web/.angular/
